# hero

./: .gitignore
crates/canvas/: Cargo.toml  index.html
crates/canvas/src/: guitar.rs  main.rs  palette.rs  rect.rs
crates/music/: chords.txt  scales.txt
crates/music/examples/: test.rs  tonal.rs
crates/music/src/: accidental.rs  dictionary.rs  interval.rs  lib.rs  list.rs  note.rs  rythm.rs  score.rs
