[package]
name = "canvas"
version = "0.1.0"
edition = "2021"

[dependencies]
music = { path = "../music" }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
# js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "Window",
  "Document",
  "Element",
  "DragEvent",
  "Node",
  "Text",
  "CssStyleDeclaration",
  "HtmlElement",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
] }
